tests/semantic/fact_cat/fact_cat.dl
.type Node

.decl F (node1:number, node2:Node)
.input F ()

// not ok binary functor cat in fact
F(cat("x","y"),"AA").
